# mcp-simple-arxiv

./: README.md  WEB_DEPLOYMENT.md  check_mcp_http.py  pyproject.toml  test_client.py  test_web_client.py
mcp_simple_arxiv/: __init__.py  arxiv_client.py  server.py  update_taxonomy.py  web_server.py
